--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="public/icon.png" />
-
+    <link rel="icon" type="image/png" href="/src/images/logo.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>masjid Vallavilai</title>
+    <title>Vallavilai Masjid - Noorul Islam Muslim Jamaath</title>
   </head>
   <body>
     <div id="root"></div>
